HBSD: Follow renaming of openntpd rc.d script
Signed-off-by:	Shawn Webb <shawn.webb@hardenedbsd.org>
Sponsored-by:	SoldierX

--- a/etc/rc.d/Makefile
+++ b/etc/rc.d/Makefile
@@ -247,7 +247,7 @@ FILES+=		ntpd
 .endif
 
 .if ${MK_OPENNTPD} != "no"
-FILES+=		openntpd
+FILES+=		local_openntpd
 .endif
 
 .if ${MK_OFED} != "no"
