--- a/etc/defaults/rc.conf
+++ b/etc/defaults/rc.conf
@@ -384,8 +384,8 @@ ntp_leapfile_expiry_days=30	# Check for new leapfile 30 days prior to
 ntp_leapfile_fetch_verbose="NO"	# Be verbose during NTP leapfile fetch
 
 ### OpenNTPd-based Network Time Services options: ###
-openntpd_enable="NO"
-openntpd_flags="-s"
+local_openntpd_enable="NO"
+local_openntpd_flags="-s"
 
 # Network Information Services (NIS) options: All need rpcbind_enable="YES" ###
 nis_client_enable="NO"		# We're an NIS client (or NO).
